test262: test262/test/built-ins/Number/prototype/toPrecision/nan.js https://bugs.webkit.org/show_bug.cgi?id=171197

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-04-23
Reviewed by Saam Barati.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

* runtime/NumberPrototype.cpp:
(JSC::numberProtoFuncToExponential):
(JSC::numberProtoFuncToFixed):
(JSC::numberProtoFuncToPrecision):
Refine the order of operations to match the spec.

Canonical link: https://commits.webkit.org/188083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215679 268f45cc-cd09-0410-ab3c-d52691b4dbfc